@@ -22,8 +22,8 @@ function smarty_function_uploads_url($params, &$template)
 	$gCms = cmsms();
 	$config = $gCms->GetConfig();
 	if( isset($params['assign']) ){
-		$smarty->assign(trim($params['assign']),$config['uploads_url']);
-		return;
+	  $smarty->assign(trim($params['assign']),$config->smart_uploads_url());
+	  return;
 	}
 	return $config['uploads_url'];
 }
